--- a/NFLGameEngine/NFLGameEngine.csproj
+++ b/NFLGameEngine/NFLGameEngine.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
