--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,26 +10,30 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
-    "axios": "^1.7.3",
-    "expo": "~51.0.9",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.2",
+    "@expo/metro-runtime": "~4.0.0",
+    "@react-native-async-storage/async-storage": "2.1.0",
+    "@react-native-community/push-notification-ios": "^1.11.0",
+    "@react-navigation/native": "^7.0.3",
+    "@react-navigation/native-stack": "^7.1.0",
+    "axios": "^1.7.7",
+    "expo": "^52.0.9",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-async-storage": "^0.0.1",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-input-select": "^1.3.8",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-input-select": "^2.1.0",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-safe-area-context": "4.14.0",
+    "react-native-screens": "4.2.0",
+    "react-native-web": "~0.19.13",
+    "expo-notifications": "~0.29.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "eslint": "^8.57.0",
-    "eslint-config-expo": "^7.1.2",
+    "@babel/core": "^7.26.0",
+    "eslint": "^9.15.0",
+    "eslint-config-expo": "^8.0.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3"
