--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,8 @@
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.1.0",
     "axios": "^1.7.7",
-    "expo": "^52.0.9",
+    "expo": "^52.0.23",
+    "expo-notifications": "~0.29.8",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -27,8 +28,7 @@
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "4.14.0",
     "react-native-screens": "4.2.0",
-    "react-native-web": "~0.19.13",
-    "expo-notifications": "~0.29.8"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
